# repoactive

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .repoactive.toml  .ruff.toml  .taplo.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.devtools  README.md  config-schema.json  flake.nix  justfile  noxfile.py  pyproject.toml  pyrightconfig.json  pytest.toml  treefmt.toml
.github/workflows/: ci.yml  publish.yml
docs/adr/: 0001-no-schedule-field.md  0002-tag-based-job-selection.md  0003-refresh-unmerged-branches-in-default-run.md  0004-job-generators.md  0005-local-repository-is-the-source-of-truth.md  0006-job-commands-are-trusted.md  0007-colocate-job-workspaces-for-git-aware-commands.md  0008-jobs-keyed-by-name.md  0009-unless-superseded-mr-creation.md  0010-validate-config-after-each-source.md  0011-platforms-keyed-by-name.md  0012-two-phase-commit-run-then-absorb.md  0013-run-only-if-changed.md  0014-keep-disabled-field.md  0015-cooldown-on.md  0016-injected-env-var-prefix.md  0017-secret-env-redaction.md  0018-non-secret-env-map.md  README.md
scripts/: emit-upgrade-jobs.py  prek.sh  smoketest.sh  update-flake.sh
src/repoactive/: boxquote.py  cli.py  (+13 more)
tests/: builders.py  test_absorb_integration.py  test_boxquote.py  test_cli.py  test_config.py  test_emit_upgrade_jobs.py  test_graph.py  test_jj.py  test_jj_integration.py  test_jobtree.py  test_lock.py  test_platforms.py  test_progress.py  test_readme.py  test_run_all_integration.py  test_runner.py  test_selection.py  test_settings.py  test_trailers.py  test_ui.py  test_updates.py
