[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repoactive"]

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[project]
name = "repoactive"
version = "0.0.3"
description = "Script-driven code changes with automated merge requests"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pydantic>=2.13.4,<3.0.0",
    "pygithub>=2.9.1,<3.0.0",
    "python-gitlab>=8.4.0,<9.0.0",
    "typer>=0.26.7,<0.27.0",
]

[project.scripts]
repoactive = "repoactive.cli:main"

[dependency-groups]
dev = [
    "nox-uv>=0.8.0",
    "pytest>=9.0.3",
    "ty>=0.0.44",
]
